--- a/Style/main.css
+++ b/Style/main.css
@@ -11,6 +11,7 @@
   --gray-80: #e7e7e7;
   --gray-50: #f1f1f1;
   --gray-10: #f4f4f4;
+  --gray-5: #f8f8f8;
   --overlay-popup: rgba(0, 0, 0, 0.5);
   --color-50: 0, 171, 120;
   --color-100: 255, 208, 92;
@@ -49,6 +50,7 @@
   --border-A: 1px solid var(--gray-50);
   --border-B: 1px solid var(--white-20);
   --border-C: 1px solid var(--gray-200);
+  --border-D: 1px solid var(--gray-100);
   --white: #fff;
   --white-20: rgba(255, 255, 255, 0.2);
   --white-30: rgba(255, 255, 255, 0.3);
@@ -765,6 +767,7 @@ body {
 }
 .menu-content .item-menu {
   flex: 1;
+  height: 28px;
   margin: 0 var(--margin-C);
   padding: var(--padding-H) var(--padding-F);
   background-color: var(--gray-100);
@@ -778,6 +781,19 @@ body {
 .menu-content .item-menu > span {
   margin-right: var(--margin-F);
   font-size: var(--font-size-B);
+}
+.menu-content .item-menu > div {
+  display: flex;
+  flex-direction: column;
+}
+.menu-content .item-menu > div > div {
+  font-size: var(--font-size-10);
+  font-weight: 400;
+  line-height: 148%;
+  color: var(--gray);
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 .menu-content .item-menu.active {
   background-color: var(--primary-color);
@@ -1193,9 +1209,9 @@ select {
   align-items: center;
 }
 .popup-login > div .title-login .title {
-  font-size: 24px;
+  font-size: 20px;
   font-weight: 600;
-  margin-bottom: var(--margin-D);
+  margin: var(--margin-I) 0 var(--margin-F) 0;
   display: flex;
   align-items: center;
 }
@@ -1207,10 +1223,11 @@ select {
   display: flex;
   align-items: center;
   line-height: 148%;
-  color: var(--gray);
+  color: var(--primary-text);
 }
 .popup-login > div .tab-login {
   display: flex;
+  justify-content: center;
 }
 .popup-login > div .tab-login .active {
   background-color: var(--primary-text);
@@ -1226,13 +1243,12 @@ select {
   font-size: var(--font-size-A);
   background-color: var(--primary-color);
   color: var(--white);
-  border-radius: var(--border-radius-X);
+  border-radius: var(--border-radius-D);
+  font-size: var(--font-size-input);
   font-weight: 400;
-  line-height: var(--line-height-input-login);
-  border: none;
   padding: var(--padding-E);
   margin: 0;
-  outline: unset;
+  white-space: nowrap;
   cursor: pointer;
 }
 .popup-login > div .input-submit:hover {
@@ -1244,12 +1260,13 @@ select {
   width: 100%;
   display: flex;
   flex-direction: column;
-  border: var(--border-C);
-  border-radius: var(--border-radius-G);
+  border: var(--border-D);
+  border-radius: var(--border-radius-F);
   margin-bottom: var(--margin-I);
+  background-color: var(--gray-10);
 }
 .popup-login > div .input-container > div {
-  border-bottom: var(--border-C);
+  border-bottom: var(--border-D);
 }
 .popup-login > div .input-container > *:last-child {
   border: none;
@@ -1258,6 +1275,10 @@ select {
   display: flex;
   align-items: center;
   padding: var(--padding-H);
+}
+.popup-login > div .input [class^="font-icon-"],
+.popup-login > div .input [class*=" font-icon-"] {
+  font-size: var(--font-size-B);
 }
 .popup-login > div .input > div {
   display: flex;
@@ -1270,23 +1291,31 @@ select {
   align-items: center;
   line-height: 148%;
   color: var(--gray);
-  margin-bottom: var(--margin-B);
+  margin-bottom: var(--margin-D);
   user-select: none;
 }
 .popup-login > div .input > div input {
   flex: 1;
-  font-size: var(--font-size-B);
+  font-size: var(--font-size-A);
   font-weight: 400;
   line-height: var(--line-height-input-login);
+  background-color: transparent;
   border: none;
   padding: 0;
   margin: 0;
   outline: unset;
 }
+.popup-login > div .check-done > span {
+  color: var(--air-50);
+}
+.popup-login > div .check-false > span {
+  color: var(--air-150);
+}
 .popup-login > div .login-information {
   display: flex;
   font-size: var(--font-size-input);
   align-items: center;
+  justify-content: center;
   line-height: 148%;
   color: var(--gray);
 }
@@ -1712,6 +1741,113 @@ body.dark .apexcharts-canvas .apexcharts-gridline {
   padding: var(--padding-H);
   display: flex;
   flex-direction: column;
+  align-items: center;
+  color: var(--primary-text);
+}
+.popup-overlay .popup > div {
+  width: calc(100% - 2*var(--margin-F));
+  margin-bottom: var(--margin-I);
+}
+.popup-overlay .popup > :first-child {
+  margin-top: var(--margin-F);
+}
+.popup-overlay .popup > :last-child {
+  margin-bottom: var(--margin-F);
+}
+.popup-overlay .popup .popup-content {
+  display: flex;
+  flex-direction: column;
+}
+.popup-overlay .popup .popup-content .item-setting {
+  border: var(--border-D);
+  border-radius: var(--border-radius-F);
+  background-color: var(--gray-10);
+  align-items: center;
+  padding: var(--padding-H);
+  margin-top: var(--margin-F);
+  display: flex;
+}
+.popup-overlay .popup .popup-content .item-setting.active {
+  border: 1px solid var(--primary-color-50);
+  background-color: var(--primary-color-10);
+}
+.popup-overlay .popup .popup-content .item-setting > span {
+  font-size: 20px;
+  color: var(--primary-color);
+}
+.popup-overlay .popup .popup-content .item-setting > :nth-child(2) {
+  margin: 0 var(--margin-K);
+}
+.popup-overlay .popup .popup-content .item-setting > div {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
+.popup-overlay .popup .popup-content .item-setting > div .item-setting-discription {
+  font-size: var(--font-size-input);
+  font-weight: 400;
+  display: flex;
+  align-items: center;
+  line-height: 148%;
+  color: var(--gray);
+}
+.popup-overlay .popup .popup-content .item-setting > div .item-setting-label {
+  flex: 1;
+  font-size: var(--font-size-A);
+  font-weight: 500;
+  line-height: var(--line-height-input-login);
+}
+.popup-overlay .popup .popup-content .item-setting > div .item-setting-select {
+  display: flex;
+  flex-direction: column;
+}
+.popup-overlay .popup .popup-content .item-setting > div .item-setting-select > div {
+  margin: var(--margin-D) 0;
+  display: flex;
+  align-items: center;
+  padding-top: var(--padding-F);
+}
+.popup-overlay .popup .popup-content .item-setting > div .item-setting-select > div > span {
+  font-size: var(--font-size-input);
+  font-weight: 500;
+  flex: 1;
+}
+.popup-overlay .popup .popup-content .item-setting > div .item-setting-select > div > div {
+  overflow: hidden;
+  display: flex;
+  flex: 1;
+  margin-left: var(--margin-F);
+}
+.popup-overlay .popup .popup-content .item-setting > div .item-setting-select > div > div > div {
+  border-radius: var(--border-radius-X);
+  flex: 1;
+  font-size: var(--font-size-10);
+  padding: var(--padding-C);
+  font-weight: 400;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: var(--border-C);
+  margin-left: var(--margin-E);
+  background-color: var(--white);
+}
+.popup-overlay .popup .popup-content .item-setting > div .item-setting-select > div > div > div:hover {
+  border-color: var(--primary-color);
+  color: var(--primary-color);
+  transition: var(--transition);
+}
+.popup-overlay .popup .popup-content .item-setting > div .item-setting-select > div > div .active {
+  border-color: var(--primary-color);
+  color: var(--primary-color);
+  background-color: var(--primary-color-10);
+}
+.popup-overlay .popup .popup-content .item-setting > div .item-setting-select > div > div .active:hover {
+  border-color: var(--primary-color-hover);
+  color: var(--primary-color-hover);
+  transition: var(--transition);
+}
+.popup-overlay .popup .popup-content > :first-child {
+  margin-top: 0;
 }
 .popup-overlay .popup .popup-header {
   display: flex;
@@ -1721,7 +1857,7 @@ body.dark .apexcharts-canvas .apexcharts-gridline {
 }
 .popup-overlay .popup .popup-header span {
   margin-right: var(--margin-F);
-  font-size: 24px;
+  font-size: 22px;
   color: var(--primary-color);
 }
 .popup-overlay .popup .popup-footer {
@@ -1732,4 +1868,58 @@ body.dark .apexcharts-canvas .apexcharts-gridline {
 .popup-overlay .popup .popup-footer .pop-btn {
   margin: 0;
   width: auto;
+}
+/* The switch - the box around the slider */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 36px;
+  height: 22px;
+}
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: var(--gray-100);
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 16px;
+  width: 16px;
+  left: 3px;
+  bottom: 3px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+input:checked + .slider {
+  background-color: var(--primary-color);
+}
+input:focus + .slider {
+  box-shadow: 0 0 1px var(--primary-color);
+}
+input:checked + .slider:before {
+  -webkit-transform: translateX(14px);
+  -ms-transform: translateX(14px);
+  transform: translateX(14px);
+}
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+.slider.round:before {
+  border-radius: 50%;
 }
