--- a/Style/main.less
+++ b/Style/main.less
@@ -1006,6 +1006,7 @@ body {
 //button 
 .pop-btn {
     display: flex;
+    align-items: center;
     justify-content: center;
     width: calc(100%);
     background-color: var(--primary-color);
@@ -1495,6 +1496,16 @@ select {
                display: flex;
                flex-direction: column;
                align-items: center;
+               .btn-popup {
+                display: flex;
+                width: 100%;
+                .pop-btn {
+                    flex: 1;
+                    width: fit-content;
+                    background-color: var(--gray);
+                    margin: 0 var(--margin-C) 0 0;
+                }
+               }
            }
            .input-submit {
               
