change font size close btn

--- a/Style/main.css
+++ b/Style/main.css
@@ -962,7 +962,7 @@ select {
 .noti-popup-content .content .header-popup > div > div,
 .noti-popup-content .content .header-popup > div span {
   color: var(--primary-color);
-  font-size: var(--font-size-A);
+  font-size: var(--font-size-input);
   font-weight: 400;
   margin-left: var(--margin-D);
   cursor: pointer;
