--- a/Style/main.less
+++ b/Style/main.less
@@ -1172,7 +1172,7 @@ select {
                 align-items: center;
                 &>div,span {
                     color: var(--primary-color);
-                    font-size: var(--font-size-A);
+                    font-size: var(--font-size-input);
                     font-weight: 400;
                     margin-left: var(--margin-D);
                     cursor: pointer;
