--- a/Style/main.less
+++ b/Style/main.less
@@ -2072,8 +2072,18 @@ body.dark .apexcharts-canvas .apexcharts-gridline {
     height: 100vh;
     overflow: hidden;
     position: fixed;
-    top: calc(-1*var(--margin-K));
-    left: calc(-1*var(--margin-K));
+    // top: calc(-1*var(--margin-K));
+    // left: calc(-1*var(--margin-K));
+    input {
+        flex: 1;
+        font-size: var(--font-size-input);
+        line-height: var(--line-height-input);
+        border: none;
+        padding: 0;
+        margin: 0;
+        height: 100%;
+        outline: unset;
+    }
     .popup-container {
         width: var(--left-menu);
         background-color: var(--white);
