--- a/Style/main.css
+++ b/Style/main.css
@@ -1733,6 +1733,10 @@ body.dark .apexcharts-canvas .apexcharts-gridline {
   overflow: hidden overlay;
   height: 100%;
 }
+.login-overlay {
+  top: 0 !important;
+  left: 0 !important;
+}
 .popup-overlay {
   background-color: var(--overlay-popup);
   display: flex;
@@ -1742,6 +1746,8 @@ body.dark .apexcharts-canvas .apexcharts-gridline {
   height: 100vh;
   overflow: hidden;
   position: fixed;
+  top: calc(-1*var(--margin-K));
+  left: calc(-1*var(--margin-K));
 }
 .popup-overlay input {
   flex: 1;
@@ -1908,7 +1914,7 @@ body.dark .apexcharts-canvas .apexcharts-gridline {
   height: 0;
 }
 /* The slider */
-.slider {
+.slider-btn {
   position: absolute;
   cursor: pointer;
   top: 0;
@@ -1919,7 +1925,7 @@ body.dark .apexcharts-canvas .apexcharts-gridline {
   -webkit-transition: 0.4s;
   transition: 0.4s;
 }
-.slider:before {
+.slider-btn:before {
   position: absolute;
   content: "";
   height: 16px;
@@ -1930,21 +1936,21 @@ body.dark .apexcharts-canvas .apexcharts-gridline {
   -webkit-transition: 0.4s;
   transition: 0.4s;
 }
-input:checked + .slider {
+input:checked + .slider-btn {
   background-color: var(--primary-color);
 }
-input:focus + .slider {
+input:focus + .slider-btn {
   box-shadow: 0 0 1px var(--primary-color);
 }
-input:checked + .slider:before {
+input:checked + .slider-btn:before {
   -webkit-transform: translateX(14px);
   -ms-transform: translateX(14px);
   transform: translateX(14px);
 }
 /* Rounded sliders */
-.slider.round {
+.slider-btn.round {
   border-radius: 34px;
 }
-.slider.round:before {
+.slider-btn.round:before {
   border-radius: 50%;
 }
